--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -49,12 +49,7 @@
   grid-auto-rows: minmax(100px, auto);
 }
 
-.page-one-column {
-  grid-column: 2 / 7;
-  grid-row: 1 ;
-  padding: 0 30px 0 30px;
-  border-right: 1px solid #ddd;
-  border-left: 1px solid #ddd;
+.page-one-column {  
   display: grid;
   grid-template-columns: repeat(15, 1fr);
 }
@@ -94,6 +89,13 @@ li.lightgreen {
 .category-nav {
   grid-column: 1/15;
   grid-row: 2;
+}
+.category-list-ul .active a {
+  background: white !important;
+  color: #337ab7 !important;
+}
+.category-list-ul .reactive a  {
+  background: #eee !important;
 }
 
 .modalcustom {
